src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-46303-2A-pos.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2_a:
      suggested_score: 1
      ts_genes: []
      ts_regions:
        - isca_id: ISCA-46743
          isca_region_name: Xq25 region (includes STAG2)
          genomic_location: "X:123034319-123236519"
          haploinsufficiency_score: sufficient_evidence
          triplosensitivity_score: sufficient_evidence
          haploinsufficiency_disease_id: ~
          triplosensitivity_disease_id: "MONDO:0100038"

