src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@ISCA-46459-2C-neg-2.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2g:
      suggested_score: 0
      benign_region:
        iscaId: ISCA-46459
        iscaRegionName: 11q14.3 population region (gnomAD-SV_v2.1_DUP_11_33042)
        genomicLocation: "chr11:89786909-89923863"
        haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_NO_EVIDENCE_AVAILABLE
        triplosensitivityScore: CLINGEN_DOSAGE_SCORE_UNLIKELY
      genes:
        - hgnc_id: "HGNC:14525"
          hgnc_symbol: CHORDC1
          ensembl_gene_id: ENSG00000110172
          ncbi_gene_id: "26973"
      functional_elements: []

