src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__evaluate@LMNB1-2A-pos.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
- g2:
    g2_a:
      suggested_score: 1
      ts_genes:
        - gene_symbol: PLP1
          ncbi_gene_id: "5354"
          genomic_location: "X:103031434-103047548"
          haploinsufficiency_score: sufficient_evidence
          triplosensitivity_score: sufficient_evidence
          haploinsufficiency_disease_id: "MONDO:0010714"
          triplosensitivity_disease_id: "MONDO:0010714"
      ts_regions: []

