src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section2__test__handle_case_2c@ISCA-46459-2C-pos-1.snap
---
source: src/strucvars/eval/dup/section2.rs
expression: res
---
g2:
  g2c:
    suggested_score: -1
    benign_regions:
      - iscaId: ISCA-46459
        iscaRegionName: 11q14.3 population region (gnomAD-SV_v2.1_DUP_11_33042)
        genomicLocation: "chr11:89786909-89923863"
        haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_NO_EVIDENCE_AVAILABLE
        triplosensitivityScore: CLINGEN_DOSAGE_SCORE_UNLIKELY

